--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,16 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>Proxxied</title>
+  <script>
+    // Set initial background color based on color scheme preference to prevent flash
+    (function () {
+      var isDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      document.documentElement.style.backgroundColor = isDark ? '#111827' : '#f9fafb';
+    })();
+  </script>
 </head>
 
-<body>
+<body class="bg-gray-50 dark:bg-gray-900">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
