feat: add SEO improvements for better Google indexing
- Add meta description, keywords, Open Graph and Twitter card tags
- Add robots.txt and sitemap.xml
- Add static pre-rendering with react-static-prerender for SSG
- Configure Netlify to build and deploy pre-rendered pages

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,27 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>Proxxied</title>
+
+  <title>Proxxied - Free MTG Proxy Generator | Print Magic: The Gathering Proxies</title>
+  <meta name="description" content="Create high-quality Magic: The Gathering proxy cards for free. Search any card, customize layouts, and print proxies for playtesting and casual play. No account required.">
+  <meta name="keywords" content="MTG proxy, Magic The Gathering proxy, proxy generator, MTG proxy maker, print MTG cards, playtesting cards, proxy cards, free MTG proxies">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://proxxied.com/">
+  <meta property="og:title" content="Proxxied - Free MTG Proxy Generator">
+  <meta property="og:description" content="Create high-quality Magic: The Gathering proxy cards for free. Search any card, customize layouts, and print proxies for playtesting.">
+  <meta property="og:image" content="https://proxxied.com/logo.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="https://proxxied.com/">
+  <meta name="twitter:title" content="Proxxied - Free MTG Proxy Generator">
+  <meta name="twitter:description" content="Create high-quality Magic: The Gathering proxy cards for free. Search any card, customize layouts, and print proxies for playtesting.">
+  <meta name="twitter:image" content="https://proxxied.com/logo.png">
+
+  <!-- Additional SEO -->
+  <link rel="canonical" href="https://proxxied.com/">
   <script>
     // Set initial background color based on color scheme preference to prevent flash
     (function () {
